fix: correction alignement réseaux sociaux #211

--- a/web/themes/custom/openig/scss/_newsletter.scss
+++ b/web/themes/custom/openig/scss/_newsletter.scss
@@ -651,7 +651,7 @@ html, body{
     border-bottom: none !important;
   }
   .field--name-field-picto-et-lien{
-    display: flex;
+    display: inline-block;
     //flex-wrap: wrap;
     //justify-content: center;
     //align-items: center;
